--- a/api/cas-mgmt-api-core/build.gradle
+++ b/api/cas-mgmt-api-core/build.gradle
@@ -2,6 +2,9 @@ description "Apereo CAS Management API Core"
 
 dependencies {
     api libraries.pac4j
+    api libraries.nimbus;
+    api libraries.casclient
+    api libraries.cassecurityfilter
     api libraries.casServer.core
     
 }
