--- a/config/cas-mgmt-config-authz-ldap/build.gradle
+++ b/config/cas-mgmt-config-authz-ldap/build.gradle
@@ -5,5 +5,8 @@ dependencies {
     
     implementation libraries.casServer.ldap 
     implementation libraries.pac4j
+    api libraries.nimbus;
+    api libraries.casclient
+    api libraries.cassecurityfilter
 
 }
