--- a/config/cas-mgmt-config-authz/build.gradle
+++ b/config/cas-mgmt-config-authz/build.gradle
@@ -4,6 +4,9 @@ dependencies {
     api project(":api:cas-mgmt-api-configuration")
     
     implementation libraries.pac4j
+    api libraries.nimbus;
+    api libraries.casclient
+    api libraries.cassecurityfilter
    
     implementation project(":core:cas-mgmt-core-authz")
 }
