--- a/core/cas-mgmt-core-authentication/build.gradle
+++ b/core/cas-mgmt-core-authentication/build.gradle
@@ -5,6 +5,9 @@ dependencies {
     api project(":api:cas-mgmt-api-core")
     
     implementation libraries.pac4j
+    api libraries.nimbus;
+    api libraries.casclient
+    api libraries.cassecurityfilter
     
     implementation project(":core:cas-mgmt-core-util")
 }
