--- a/gradle/springboot.gradle
+++ b/gradle/springboot.gradle
@@ -35,6 +35,7 @@ if (project.ext.forceBootifulArtifact || (!rootProject.publishReleases  && !root
                         "Specification-Version": rootProject.currentRevision,
                         "Implementation-Version": project.version)
             }
+            from "${buildDir}/resources/main", { into "WEB-INF/classes" }
             launchScript()
         }
 
@@ -53,15 +54,19 @@ if (project.ext.forceBootifulArtifact || (!rootProject.publishReleases  && !root
                 classpath = files("$buildDir/classes/main", "$buildDir/resources/main", pathingJar.archivePath)
             }
         }
-        
+
         sourceResources sourceSets.bootRun
         systemProperties = System.properties
-
+        
         def list = []
         list.add("-XX:TieredStopAtLevel=1")
         list.add("-Xverify:none")
         if (rootProject.enableRemoteDebugging) {
-            list.add("-Xrunjdwp:transport=dt_socket,address=5000,server=y,suspend=n")
+            def port = findAvailableTcpPort(5000..5010)
+            if (port > 0) {
+                println "Listening on port ${port} for remote debugging requests"
+                list.add("-Xrunjdwp:transport=dt_socket,address=${port},server=y,suspend=${rootProject.remoteDebuggingSuspend}")
+            }
         }
         jvmArgs = list
     }
@@ -70,4 +75,18 @@ if (project.ext.forceBootifulArtifact || (!rootProject.publishReleases  && !root
 Ignoring application of Spring Boot plugin, since the build is preparing to publish SNAPSHOTs or releases,
 or the build is signaled to skip the plugin explicitly.
     """
+}
+
+int findAvailableTcpPort(List<Integer> portRange) {
+    for (int port : portRange) {
+        try {
+            logger.debug "Checking port ${port}"
+            def serverSocket = new ServerSocket(port)
+            serverSocket.close()
+            return port
+        } catch (Exception e) {
+             logger.debug "Port ${port} is not available: ${e.message}"
+        }
+    }
+    return -1
 }
