--- a/support/cas-mgmt-support-version-control/build.gradle
+++ b/support/cas-mgmt-support-version-control/build.gradle
@@ -6,6 +6,9 @@ dependencies {
     
     implementation libraries.git
     implementation libraries.pac4j
+    api libraries.nimbus;
+    api libraries.casclient
+    api libraries.cassecurityfilter
     implementation libraries.casServer.versionControl
     
     implementation project(":core:cas-mgmt-core-authentication")
